public/assets/default_theme/css/pages/feeds.css
.favourite-button-container {
    -moz-mask-image: url(../../icons/heart.svg);
    -o-mask-image: url(../../icons/heart.svg);
    -webkit-mask-image: url(../../icons/heart.svg);
    mask-image: url(../../icons/heart.svg);
}

.reply-button-container {
    -moz-mask-image: url(../../icons/reply.svg);
    -o-mask-image: url(../../icons/reply.svg);
    -webkit-mask-image: url(../../icons/reply.svg);
    mask-image: url(../../icons/reply.svg);
}

.repeat-button-container {
    -moz-mask-image: url(../../icons/repeat.svg);
    -o-mask-image: url(../../icons/repeat.svg);
    -webkit-mask-image: url(../../icons/repeat.svg);
    mask-image: url(../../icons/repeat.svg);
}

.delete-button-container {
    -moz-mask-image: url(../../icons/delete.svg);
    -o-mask-image: url(../../icons/delete.svg);
    -webkit-mask-image: url(../../icons/delete.svg);
    mask-image: url(../../icons/delete.svg);
}

.icon-eye-opened {
    background-color: var(--foreground);
    -moz-mask-image: url(../../icons/eye-opened.svg);
    -o-mask-image: url(../../icons/eye-opened.svg);
    -webkit-mask-image: url(../../icons/eye-opened.svg);
    mask-image: url(../../icons/eye-opened.svg);
    display: inline-flex;
    height: 1em;
    width: 1em;
}

.icon-eye-closed {
    background-color: var(--foreground);
    -moz-mask-image: url(../../icons/eye-closed.svg);
    -o-mask-image: url(../../icons/eye-closed.svg);
    -webkit-mask-image: url(../../icons/eye-closed.svg);
    mask-image: url(../../icons/eye-closed.svg);
    display: inline-flex;
    height: 1em;
    width: 1em;
}

.embed {
    border: unset;
    display: flex;
    padding: var(--s);
}

.embed .p-author, .embed .p-name {
    font-weight: 700;
}

.embed .p-summary {
    width: 60%;
}

.embed .p-summary hr {
    margin-bottom: var(--s);
    margin-top: var(--s);
}

.embed header {
    margin-bottom: var(--m);
    width: 100%;
}

.embed img {
    height: auto;
    margin-right: var(--s);
    width: 25%;
}

.embed img {
    max-height: min-content;
    max-width: min-content;
    padding: unset;
}

.feed-actions-details summary, .note-actions-extra-details summary {
    display: block;
}

.feed-actions-details-dropdown {
    font-size: .937rem;
}

.feed-actions-details[open] > .feed-actions-details-dropdown, .note-actions-extra-details[open] > summary + * {
    background: var(--background-card);
    border: 1px solid var(--border);
    border-radius: var(--s);
    box-shadow: var(--shadow);
    display: flex;
    flex-direction: column;
    padding: 4px 8px;
    position: absolute;
    right: 0;
    width: max-content;
    z-index: 1;
}

.feed-actions-details[open] > summary, .note-actions-extra-details[open] > summary {
    opacity: 1 !important;
}

.feed-actions-details[open] svg {
    height: auto;
    width: 1em;
}

.feed-empty {
    display: flex;
}

.feed-empty .feed-background {
    height: auto;
    margin-left: auto;
    margin-right: auto;
    margin-top: var(--xxl);
    opacity: 3%;
    width: 40%;
}

.feed-header {
    display: flex;
    margin-bottom: var(--m);
    align-items: center;
}

.feed-header .feed-actions {
    margin-left: auto;
    text-transform: capitalize;
}

.h-entry {
    background-color: var(--background-card) !important;
    border-radius: var(--s);
    display: flex;
}

.h-entry .embed[class*="p-"] {
    padding: unset;
}

.h-entry .replies {
    border-left: 1px solid var(--border);
    margin-bottom: var(--s);
    padding: 0 var(--s);
}

.h-entry a:focus {
    text-decoration: underline;
}

.h-entry figure,
.note-attachments-unit figure {
    background: var(--gradient);
    border-radius: var(--s);
    margin: unset;
    padding: var(--s);
}

.h-entry img,
.note-attachments-unit figure img {
    background: repeating-conic-gradient(#ffffff66 0deg 90deg, #ffffff33 0deg 180deg) 0 0/40px 40px round;
}

.h-entry-language {
    background: var(--gradient-backwards);
    border-radius: 0 0 var(--s) 0;
    color: var(--foreground);
    float: right;
    padding: 6px 12px;
    position: relative;
}

.h-entry:not(:first-child) {
    margin-top: var(--s);
}

.h-entry:not(embed) {
    border: 1px solid var(--border);
}

.h-entry[id^="note-anchor-"]:target {
    border: 2px solid var(--accent) !important;
}

.note-attachments {
    display: flex;
}

.note-attachments-unit {
    border-radius: var(--s);
    display: flex;
    max-width: max-content;
    padding: var(--s);
}

.note-attachments-unit > figure figcaption {
    display: flex;
    word-break: break-all;
}

.note-attachments-unit:not(:only-child) {
    margin-right: var(--s);
}

.note-info,
embed header {
    border-bottom: unset;
    border-radius: 0 var(--s) 0 0;
    display: flex;
    line-height: initial;
    padding: 4px var(--s) 4px 0;
}
.note-info {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    background: var(--gradient-backwards);
}
.note-info-start {
    flex: 1;
    width: 15px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}
.note-info-start:hover, .note-info-start:focus {
    text-align: left;
    direction: rtl;
}
.note-info-start small {
    opacity: 0.5;
}
.note-author-url {
    font-weight: 700;
}
.note-author-uri,
.note-conversation-info {
    font-style: italic;
}
.note-actions {
    display: block;
}
.note-actions > li {
    display: inline-block;
    margin-left: 4px;
}
.note-actions-extra-details {
    margin-right: 4px;
}
.note-actions-extra-details ul {
    display: flex;
    flex-direction: column;
}
.note-actions-extra-details hr {
    margin: unset;
}
.note-actions-extra-details summary {
    width: 1em;
    height: 1em;
    opacity: 0.5;
}
.note-actions-extra-details[open] > summary + * > a {
    font-size: 0.937rem;
    line-height: 2;
}
.note-actions-separator {
    background: var(--foreground);
    display: inline-block;
    height: 1em;
    opacity: 0.33;
    width: 1px;
}
.note-actions-set {
    opacity: 1 !important;
}

.note-complementary {
    background: var(--gradient) !important;
    border-left: 1px solid var(--accent);
    font-size: .937rem;
    margin-bottom: 4px;
    margin-right: var(--s);
    padding-left: var(--s);
    border-radius: 0 0 0 var(--s);
}

.note-complementary a {
    font-weight: 700;
}

.note-complementary:last-of-type {
    margin-bottom: var(--s);
}

.note-content {
    border-radius: 0 0 var(--s) var(--s);
    display: block;
    padding: 0 4px 4px 0;
}

.note-replies-start {
    font-size: .937rem;
    font-weight: 700;
    opacity: .5;
}

.note-sidebar {
    display: flex;
    padding: var(--s);
}

.note-sidebar > * {
    border-radius: 2px;
    height: auto;
    max-height: 3rem;
    max-width: 3rem;
    width: 100%;
}

.note-sidebar img {
    background: unset !important;
}

.note-text a {
    text-decoration: underline !important;
}

.note-text p:not(:last-of-type) {
    display: block;
    margin-bottom: var(--s);
    width: 100%;
}

.note-text-details-summary:after {
    content: "\2193";
}

.note-text-details .note-text-details-summary small {
    font-style: italic;
}

.note-text-details[open] summary:after {
    content: "\2191";
    float: right;
}

.note-text-details[open] .note-text-details-summary small {
    display: none;
}

.note-wrapper {
    height: inherit;
    width: 100%;
}

@media only screen and (max-width: 1280px) {
    .note-sidebar {
        padding: 8px 2px 0;
    }

    .note-sidebar > * {
        max-height: 2rem;
        max-width: 2rem;
    }
}

